# AN2DL

./: .gitignore  README.md
.github/workflows/: codequality-c1.yml  pytest-c1.yml
challenge_1/: .flake8  README.md  mypy.ini  pyproject.toml  requirements.txt
challenge_1/challenge_1/: main.py
challenge_1/challenge_1/cloud_entrypoint/: README.md  entrypoint.py  hypertune.py  requirements.txt  template  template.py
challenge_1/challenge_1/helpers/: cutmix.py  log.py  train_test_split.py  utils.py
challenge_1/challenge_1/models/: __init__.py  base_model.py  convnext.py  copilot_net.py  efficientnetb7.py  mobilenet.py  nasnet.py  vgg16.py  xception.py
challenge_1/challenge_1/runtime/: log.py
challenge_1/challenge_1/training/: callbacks.py  cloud_training.py  local_training.py  train_net.py
challenge_1/relevant_submissions/: README.md
challenge_1/relevant_submissions/CopilotModel_20221110_091806/: metadata.json
challenge_1/relevant_submissions/submission_20221109_231631/: metadata.json
challenge_1/submissions/submission_20221109_212622/: metadata.json
challenge_2/: .flake8  mypy.ini  pyproject.toml
challenge_2/film-shit/submission/: model.py
challenge_2/film-shit/submission/SubmissionModel1/: keras_metadata.pb  saved_model.pb
challenge_2/film-shit/submission/SubmissionModel1/variables/: variables.data-00000-of-00001  variables.index
challenge_2/film-shit/submission/SubmissionModel2/: keras_metadata.pb  saved_model.pb
challenge_2/film-shit/submission/SubmissionModel2/variables/: variables.data-00000-of-00001  variables.index
challenge_2/film-shit/submission/SubmissionModel3/: keras_metadata.pb  saved_model.pb
challenge_2/film-shit/submission/SubmissionModel3/variables/: variables.data-00000-of-00001  variables.index
challenge_2/film-shit/submission/SubmissionModel4/: keras_metadata.pb  saved_model.pb
challenge_2/film-shit/submission/SubmissionModel4/variables/: variables.data-00000-of-00001  variables.index
challenge_2/film-shit/submission/SubmissionModel5/: keras_metadata.pb  saved_model.pb
challenge_2/film-shit/submission/SubmissionModel5/variables/: variables.data-00000-of-00001  variables.index
challenge_2/film-shit/submission/SubmissionModel6/: keras_metadata.pb  saved_model.pb
challenge_2/film-shit/submission/SubmissionModel6/variables/: variables.data-00000-of-00001  variables.index
challenge_2/film-shit/submission/SubmissionModel7/: keras_metadata.pb  saved_model.pb
challenge_2/film-shit/submission/SubmissionModel7/variables/: variables.data-00000-of-00001  variables.index
challenge_2/film-shit/submission/SubmissionModel8/: keras_metadata.pb  saved_model.pb
challenge_2/film-shit/submission/SubmissionModel8/variables/: variables.data-00000-of-00001  variables.index
challenge_2/notebooks/: 1D_convolutional.ipynb  attention-igor-tries.ipynb  data_visualization.ipynb  film_math_folder.ipynb  leo_tests_preprocessing.ipynb  template.ipynb
challenge_2/utils/: attention.py  callbacks.py  submission.py
