[tool.poetry]
name = "challenge-1"
version = "0.1.0"
description = ""
authors = ["Filippo Manzardo <film@bendingspoons.com>"]
readme = "README.md"
packages = [{include = "challenge_1"}]

[tool.poetry.dependencies]
python = "~3.10"

tensorflow = {version = "^2.10.0", markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = "^2.10.0", markers = "sys_platform == 'darwin'"}
numpy = "^1.21.6"
matplotlib = "^3.2.2"
seaborn = "^0.11.2"
scipy = "^1.7.3"
scikit-learn = "^1.0.2"
scikit-image = "^0.18.3"
pandas = "^1.3.5"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.990"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
exclude = '''
(
    \.idea |
    \.DS_Store |
    \.githooks |
    \.vscode |
    venv |
    .html |
    .json |
    .pyc |
    .sql
)
'''

[tool.isort]
profile = "black"
line_length = 100
